--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-	<title>Referral Program - Dialogika</title>
-	<meta content="Event Dialogika" name="description">
-	<meta content="referral program, refer a friend, invite friend" name="keywords">
+	<title>Info Referral Program - Dialogika</title>
+	<meta content="Info Referral Dialogika" name="description">
+	<meta content="Info referral program, refer a friend, invite friend" name="keywords">
 
 	<!-- Favicons -->
 	<link href="assets/img/favicon.webp" rel="icon">
@@ -203,7 +203,7 @@
 	<!-- ======= Top Bar, Header, Side Bar ======= -->
 
 	<main id="main">
-		<div class="hero hero--skin-1 section--grey">
+		<div class="hero hero--skin-1 section--grey scrollto" id="hero">
 
 			<div class="container">
 				<div class="col-md-auto">
@@ -258,7 +258,7 @@
 											<a>Kirim Whatsapp</a></button>
 									</div>
 
-									<a href="#terms" class="disclaimer-style-referral">
+									<a href="#terms" class="disclaimer-style-referral scrollto">
 										Syarat & Ketentuan
 										Berlaku</a>
 
@@ -298,53 +298,53 @@
 					<div class="row  partners-imgs-wrapper">
 
 						<div class=" partner-wrapper">
-							<img src="assets/img/corporate/uad.png" class="rounded" alt="Image 1" />
+							<img loading="lazy" src="assets/img/corporate/uad.png" class="rounded" alt="Image 1" />
 						</div>
 						<div class=" partner-wrapper">
-							<img src="assets/img/corporate/amikom.png" class="rounded " alt="Image 2" />
+							<img loading="lazy" src="assets/img/corporate/amikom.png" class="rounded " alt="Image 2" />
 						</div>
 						<div class=" partner-wrapper">
-							<img src="assets/img/corporate/aveon.png" class="rounded " alt="Image 3" />
+							<img loading="lazy" src="assets/img/corporate/aveon.png" class="rounded " alt="Image 3" />
 						</div>
 						<div class=" partner-wrapper">
-							<img src="assets/img/corporate/avo.png" class="rounded " alt="Image 4" />
+							<img loading="lazy" src="assets/img/corporate/avo.webp" class="rounded " alt="Image 4" />
 						</div>
 						<div class=" partner-wrapper">
-							<img src="assets/img/corporate/gides.jpg" class="rounded " alt="Image 5" />
+							<img loading="lazy" src="assets/img/corporate/gides.webp" class="rounded " alt="Image 5" />
 						</div>
 
 						<div class=" partner-wrapper ">
-							<img src="assets/img/corporate/kdi.png" class="rounded " alt="Image 6" />
+							<img loading="lazy" src="assets/img/corporate/kdi.webp" class="rounded " alt="Image 6" />
 						</div>
 						<div class=" partner-wrapper ">
-							<img src="assets/img/corporate/kusuma.png" class="rounded " alt="Image 7" />
+							<img loading="lazy" src="assets/img/corporate/KusumaDentalCare.png" class="rounded " alt="Image 7" />
 						</div>
 						<div class=" partner-wrapper ">
-							<img src="assets/img/corporate/mercu.png" class="rounded " alt="mercu" />
+							<img loading="lazy" src="assets/img/corporate/mercu.png" class="rounded " alt="mercu" />
 						</div>
 						<div class=" partner-wrapper ">
-							<img src="assets/img/corporate/polita.png" class="rounded " alt="polita" />
+							<img loading="lazy" src="assets/img/corporate/polita.png" class="rounded " alt="polita" />
 						</div>
 
 						<div class=" partner-wrapper" id="hiddenImages">
-							<img src="assets/img/corporate/ruhui-rahayu.png" class="rounded " alt="ruhui" />
+							<img loading="lazy" src="assets/img/corporate/ruhui-rahayu.webp" class="rounded " alt="ruhui" />
 						</div>
 						<div class=" partner-wrapper" id="hiddenImages">
-							<img src="assets/img/corporate/smk-dr-sutomo-temanggung.png" class="rounded "
+							<img loading="lazy" src="assets/img/corporate/smk-dr-sutomo-temanggung.png" class="rounded "
 								alt="Image 11" />
 						</div>
 						<div class=" partner-wrapper" id="hiddenImages">
-							<img src="assets/img/corporate/uad.png" class="rounded " alt="uad" />
+							<img loading="lazy" src="assets/img/corporate/uad.png" class="rounded " alt="uad" />
 						</div>
 						<div class=" partner-wrapper" id="hiddenImages">
-							<img src="assets/img/corporate/uii.png" class="rounded " alt="uii" />
+							<img loading="lazy" src="assets/img/corporate/uii.png" class="rounded " alt="uii" />
 						</div>
 						<div class=" partner-wrapper" id="hiddenImages">
-							<img src="assets/img/corporate/uin-suka.png" class="rounded " alt="uin" />
+							<img loading="lazy" src="assets/img/corporate/uin-suka.png" class="rounded " alt="uin" />
 						</div>
 
 						<div class=" partner-wrapper" id="hiddenImages">
-							<img src="assets/img/corporate/mnc.png" class="rounded " alt="mnc" />
+							<img loading="lazy" src="assets/img/corporate/mnc.webp" class="rounded " alt="mnc" />
 						</div>
 					</div>
 
